add paragraph and list to code

--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
   </head>
   <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias dolorum id
+      quod? Consequatur, debitis. Quod ipsam ipsa fugiat consequatur provident
+      ad veritatis nisi, minus distinctio! Nostrum tenetur dolor id quidem?
+    </p>
+
+    <ul>
+      <li>home</li>
+      <li>downloads</li>
+      <li>contact us</li>
+    </ul>
   </body>
 </html>
